--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <!-- 布局 九宫格方式存储 -->
+    <div class="wrapper">
+        <div class="item">
+            <div class="span">1</div>
+            <div class="span">2</div>
+            <div class="span"></div>
+            <div class="span">4</div>
+            <div class="span">5</div>
+            <div class="span"></div>
+            <div class="span"></div>
+            <div class="span">8</div>
+            <div class="span">9</div>
+        </div>
+    </div>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
